# functional_programming_lab_3

./: .gitignore  README.md
.github/workflows/: lab3.yml
my_lab3/: data.txt  dune-project
my_lab3/lib/: dune  interp.ml  point.ml
my_lab3/test/: dune  test_my_lab3.ml
