(lang dune 3.20)

(name my_lab3)

(generate_opam_files true)

(source
 (github nghiaphamhb/functional_programming_lab_2))

(authors "nghiaphamhb <phamdangtrungnghia@gmail.com>")

(maintainers "nghiaphamhb <phamdangtrungnghia@gmail.com>")

(license LICENSE)

(documentation https://en.wikipedia.org/wiki/Linear_interpolation)

(package
 (name my_lab3)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
